--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -64,3 +64,19 @@
   width: 100%;
   height: 100%;
 }
+
+.card {
+  width: 250px;
+  height: auto;
+  padding: 20px 20px 20px 15px;
+}
+
+.placeholder {
+  width: 220px;
+  height: auto;
+  border: 1px solid black;
+  padding: 5px;
+  border-radius: 5px;
+  overflow: auto;
+  margin-bottom: 5px;
+}
