--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,5 +1,29 @@
 @import url("https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@0,300;0,400;0,700;0,900;1,300;1,400;1,700;1,900&display=swap");
 
+/* Global Scrollbar Styles */
+::-webkit-scrollbar {
+  width: 5px;
+  height: 5px;
+}
+
+::-webkit-scrollbar-track {
+  box-shadow: inset 0 0 5px rgb(235, 235, 235);
+  border-radius: 10px;
+}
+
+::-webkit-scrollbar-thumb {
+  background: #660033;
+  border-radius: 10px;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background: #660033;
+}
+
+* {
+  scroll-behavior: smooth;
+}
+
 .flip-open-animation {
   animation: bookFlip 1s ease-in-out forwards;
   position: absolute;
@@ -82,6 +106,6 @@
   margin-bottom: 5px;
 }
 
-.stars{
+.stars {
   color: gold;
-}  
+}
